test/error/ast/DeclarationIsPrivate.mod
MODULE DeclarationIsPrivate;
IMPORT PrivateDeclProvider;
BEGIN
  PrivateDeclProvider.Hidden;
END DeclarationIsPrivate.
